@@ -1,5 +1,15 @@
 2009-03-06  Tao Wang  <dancefire@gmail.com>
 
+	* cpp/include/openclas/dictionary.hpp: Add longest_word_length() and tag_total_weight().
+	* cpp/include/openclas/serialization.hpp: 
+		Implemented load_tags_from_ctx().
+		Rename load_from_file to load_from_{ext}_file.
+		Rename save_to_file to save_to_{ext}_file.
+	* cpp/src/unit_test/unit_test_segment.hpp:
+	* cpp/src/unit_test/unit_test_serialization.hpp: minor changes.
+
+2009-03-06  Tao Wang  <dancefire@gmail.com>
+
 	* cpp/include/openclas/segment.hpp:
 		Add Segment::segment_type.
 		Rewrite segment_to_string().
